# smart-cleaning-company-

./: BUBBLE  CMakeLists.txt  README.md  Untitled design7  Untitled_design_horizontalaza  aaaaa  arduino.cpp  arduino.h  client.h  commande.cpp  commande.h  commande.ui  connection.cpp  connection.h  e_mail.h  employe.cpp  employe.h  facture.cpp  facture.h  gestionCommandes.pro  gestionCommandes.pro.user.66676ba  historique.cpp  historique_produittxt.txt  main.cpp  maintenance.cpp  maintenance.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  produit.cpp  produit.h  resource.qrc  server.cpp  server.h  service.cpp  service.h
Atelier_Connexion/Atelier_Connexion/: Atelier_Connexion.pro  Facture.cpp  Facture.h  arduino.cpp  arduino.h  client.cpp  commande.cpp  commande.h  connection.cpp  email.cpp  email.h  historique.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  produit.cpp  produit.h  service.cpp  service.h
